Implement M8 per-chat MCP UI toggles and tool activity reporting.
Adds sidebar MCP panel, medical-dataset bootstrap seed, and scoped tool-call SSE events.

Co-authored-by: Cursor <cursoragent@cursor.com>